Fix note add button disappearing on mobile.

--- a/notes-app/src/css/note.css
+++ b/notes-app/src/css/note.css
@@ -4,6 +4,10 @@
   --note-prio2-bg-color: #f9ffa1;
 }
 
+.notes-view {
+  overflow: hidden;
+}
+
 .note-item {
   display: flex;
   align-items: stretch;
